config/networkpolicy/allow-namespace.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: { }
  egress:
    - to:
        - podSelector: { }
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
