config/networkpolicy/deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
  ingress: [ ]
  egress: [ ]
